Dark mode fix

--- a/src/DisplayStyles.css
+++ b/src/DisplayStyles.css
@@ -57,10 +57,12 @@
 .night {
   background-color: #333;
   color: #fff;
+  height: 100vh;
 
 }
 .day {
   background-color: #ffffff;
   color: #333;
+  height: 100vh;
 }
 
